# RadiAiDD

./: .gitignore  LICENSE  MAIN.py  Positioning_AssistantMAIN.py  RadiAID.bat  Readme.md  Readme.txt  environment.yml  matplotlibwidgetFile.py  requirements.txt  setup.cfg  untitled1.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
Backend/: Children.py  Containers.py  IsoCenter.ui  IsoCenter5.py  Landmark.py  Landmark.ui  Landmark5.py  MotorControl.py  Positioning_Assistant_GUI.py  Positioning_Assistant_GUI.ui  Positioning_Assistant_GUI.ui.bak  Positioning_Assistant_GUI.ui.bak1  Positioning_Assistant_GUI.ui.bak2  Positioning_Assistant_GUI.ui.bak3  Positioning_Assistant_GUI.ui.bak4  Positioning_Assistant_GUI5.py  Radiography.py  Registration.py  Report.py  Target.ui  __init__.py  matplotlibwidgetFile.py  matplotlibwidgetFileSmall.py
Backend/Icons/: Thumbs.db
Backend/OWIS/: owis.ini  ps10.h  ps10.lib  ps10tool.c
Backend/Style/: Darkorange.qss
Backend/UI/: IsoCenter.ui  IsoCenter5.py  Landmark.ui  Landmark5.py  Positioning_Assistant_GUI.py  Positioning_Assistant_GUI.ui  Positioning_Assistant_GUI5.py  ressources.qrc
Backend/UI_files/: Positioning_Assistant_GUI.ui
Icons/: Thumbs.db
LogFiles/: 190808_RadiAID_LogFile  190812_RadiAID_LogFile  200330_RadiAID_LogFile  200331_RadiAID_LogFile
RadiAIDD/: __init__.py  __main__.py  radiaidd.py
RadiAIDD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
n2v/: events.out.tfevents.1618244235.V15NITRO  info.txt  weights_best.h5  weights_last.h5
tests/: test_radiaidd.py
(+23 files in other folders)
