[metadata]
name = RadiAIDD
version = 0.1
author = Johannes Müller
author_email = johannes_richard.mueller@tu-dresden.de

license = BSD-3-Clause
description = Positioning aid to align projected CT images and on-beam radiographic images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jo-mueller/RadiAiDD.git
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7


# add your package requirements here
install_requires =
    scikit-image
    pydicom
    pyserial
    tqdm
    matplotlib
    PyQt5

[options.entry_points]
gui_scripts  =
    RadiAiDD = RadiAIDD:run
